fix: align list bullets and task checkboxes in Live Preview

--- a/src/features/_collapsed-list-bullets.scss
+++ b/src/features/_collapsed-list-bullets.scss
@@ -43,13 +43,8 @@ li.is-collapsed .list-bullet:after,
 }
 
 .markdown-source-view.mod-cm6.is-live-preview .cm-indent::before {
-  --indentation-guide-editing-indent: 0.9em;
+  --indentation-guide-editing-indent: 0.85em;
   margin-inline-start: var(--indentation-guide-editing-indent);
-}
-
-.markdown-source-view.mod-cm6 .task-list-label {
-  padding: 0;
-  margin-inline-start: -0.15em;
 }
 
 .cm-s-obsidian .cm-formatting-list {
